ros2_ws/log/build_2024-11-14_12-46-49/mypkg/stderr.log
  File "/home/haru/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 7
    pub node.create_publisher(Int16, "countup", 10)
        ^
SyntaxError: invalid syntax

